upgrade to es 9.3.1